update build.gradle and README