@@ -1,2 +1,12 @@
 # ioxbox
 discord bot. boxes. yes
+
+# running
+##### from a jar file:
+1. download the javafx sdk from [here](https://gluonhq.com/products/javafx/)
+2. clone this repository and build the jar file
+3. run the jar with the VM argument *--module-path C:/path/to/javafx/sdk/lib --add-modules javafx.controls,javafx.fxml*
+
+##### from the sources
+1. clone this repository
+2. run `gradlew run`
